update post tags

--- a/src/content/posts/update-docker-containers.mdx
+++ b/src/content/posts/update-docker-containers.mdx
@@ -5,8 +5,8 @@ publishedDate: 2024-09-14
 previewImage: '@/assets/posts/update-docker-containers.jpg'
 openGraphImage: '@/assets/posts/update-docker-containers.jpg'
 tags:
-  - tutorial
   - docker
+  - devops
 ---
 
 In the realm of self-hosting, it is very common to run containerized applications rather than bare-metal installs. But how can we keep applications on their latest versions? Automated or manually? This post will highlight some different strategies!
