--- a/src/content/posts/how-to-add-giscus.mdx
+++ b/src/content/posts/how-to-add-giscus.mdx
@@ -5,7 +5,7 @@ publishedDate: 2024-01-25
 openGraphImage: '@/assets/posts/how-to-add-giscus.jpg'
 previewImage: '@/assets/posts/how-to-add-giscus.jpg'
 tags:
-  - tutorial
+  - astro
 ---
 
 Hosting a thin static blog on a platform like [GitHub Pages](https://docs.github.com/en/pages/getting-started-with-github-pages/creating-a-github-pages-site) has numerous advantages but also takes away some interactivity. Fortunately, [Giscus](https://giscus.app/) exists and offers a way to embed user comments on static sites.
