refactor: move post/project assets from src/assets to content/assets

--- a/content/posts/announcing-nordlys.mdx
+++ b/content/posts/announcing-nordlys.mdx
@@ -2,8 +2,8 @@
 title: Announcing Nordlys, a minimal Astro theme
 description: Astro theme for your personal website, blog or project portfolio
 publishedDate: 2024-10-18
-previewImage: '@/assets/posts/announcing-nordlys.png'
-openGraphImage: '@/assets/posts/announcing-nordlys.png'
+previewImage: '../assets/posts/announcing-nordlys.png'
+openGraphImage: '../assets/posts/announcing-nordlys.png'
 tags:
   - astro
   - tailwindcss
@@ -11,8 +11,8 @@ tags:
 
 I'm happy to announce the first release of Nordlys, a minimal Astro blog theme! Take a look at the repository on [Github](https://github.com/FjellOverflow/nordlys) or check out the preview at [nordlys.fjelloverflow.dev](https://nordlys.fjelloverflow.dev/).
 
-import PreviewImage from '@/assets/posts/announcing-nordlys.png'
 import { Image } from 'astro:assets'
+import PreviewImage from '../assets/posts/announcing-nordlys.png'
 
 <Image src={PreviewImage} class="sm:w-2/3 w-4/5 my-0 mx-auto" data-img-embed alt="A computer monitor with chat bubbles floating around it" loading="eager"/>
 
