--- a/content/posts/versioning.mdx
+++ b/content/posts/versioning.mdx
@@ -2,16 +2,16 @@
 title: "Software Versioning: a recipe"
 description: Specifications and best practices in software development
 publishedDate: 2024-11-29
-previewImage: '@/assets/posts/versioning.png'
-openGraphImage: '@/assets/posts/versioning.png'
+previewImage: '../assets/posts/versioning.png'
+openGraphImage: '../assets/posts/versioning.png'
 tags:
   - devops
 ---
 
 My project is on version `2.3.4`, and I have implemented a critical fix. What is the next version number? It it `2.3.5` or `2.4.0`? What should I write into the commit message? Do I need to add an entry to the changelog? In this post, we will discuss some established conventions and automation of versioning in software development.
 
-import PreviewImage from '@/assets/posts/versioning.png'
 import { Image } from 'astro:assets'
+import PreviewImage from '../assets/posts/versioning.png'
 
 <Image src={PreviewImage} class="sm:w-2/3 w-4/5 my-0 mx-auto" data-img-embed alt="A computer monitor with chat bubbles floating around it" loading="eager"/>
 
