--- a/content/posts/deniable-encryption.mdx
+++ b/content/posts/deniable-encryption.mdx
@@ -2,8 +2,8 @@
 title: Deniable Encryption
 description: A critical look at encryption under the threat of key disclosure law
 publishedDate: 2022-11-01
-previewImage: '@/assets/posts/deniable-encryption.jpg'
-openGraphImage: '@/assets/posts/deniable-encryption.jpg'
+previewImage: '../assets/posts/deniable-encryption.jpg'
+openGraphImage: '../assets/posts/deniable-encryption.jpg'
 tags:
   - privacy
   - encryption
@@ -11,8 +11,8 @@ tags:
 
 Encryption is both useful and vital in the digital age; however, it also presents challenges and can give rise to problematic dilemmas. Here, I want to take a deeper look at the concept of so-called _Deniable Encryption_.
 
-import PreviewImage from '@/assets/posts/deniable-encryption.jpg'
 import { Image } from 'astro:assets'
+import PreviewImage from '../assets/posts/deniable-encryption.jpg'
 
 
 <Image src={PreviewImage} class="sm:w-2/3 w-4/5 my-0 mx-auto" data-img-embed alt="A hard drive, locked with a padlock" loading="eager"/>
