add links to about page

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -6,7 +6,7 @@ activeHeaderLink: About
 
 # About
 
-I'm a full-stack web developer with a passion for _Vue.js_ and its ecosystem. My other interests include [_Linux_](/tags/linux), _free and open-source software_, [_online privacy_](/tags/privacy), and _self-hosting_. When not at my desk, I enjoy [reading a good book](/bookshelf) and can be found traveling and [hiking in nature](/photos).
+I'm a full-stack web developer with a passion for [_Vue.js_](/tags/vue) and its ecosystem. My other interests include [_Linux_](/tags/linux), _free and open-source software_, [_online privacy_](/tags/privacy), and [_self-hosting_](/tags/devops). When not at my desk, I enjoy [reading a good book](/bookshelf) and can be found traveling and [hiking in nature](/photos).
 
 import Logo from '@/assets/logo.svg'
 import { Image } from 'astro:assets'
