content: adjust post tagline

--- a/content/posts/collatz-sqlite.mdx
+++ b/content/posts/collatz-sqlite.mdx
@@ -1,6 +1,6 @@
 ---
 title: Testing the Collatz Conjecture with recursive SQL
-description: Using Common Table Expressions in SQLite to test the Collatz Conjecture
+description: Common Table Expressions in SQLite to test the Collatz Conjecture
 publishedDate: 2025-07-07
 previewImage: '../assets/posts/collatz-sqlite.png'
 openGraphImage: '../assets/posts/collatz-sqlite.png'
