content: fix typos

--- a/content/posts/collatz-sqlite.mdx
+++ b/content/posts/collatz-sqlite.mdx
@@ -21,7 +21,7 @@ For those unfamiliar with it (most CS students will encounter it in their first 
 
 > If you start with any positive integer and repeatedly divide it by 2 if it's even, or multiply it by 3 and add 1 if it's odd, will you always eventually reach the number 1?
 
-As a *conjecture*, it is believed to be true but not yet proven. But even without a mathematics degree, you can easily test the conjecture for any number. Here are a few exaples:
+As a *conjecture*, it is believed to be true but not yet proven. But even without a mathematics degree, you can easily test the conjecture for any number. Here are a few examples:
 
 - 3 - 10 - 5 - 16 - 8 - 4 - 2 - 1. It works.
 - 17 - 52 - 26 - 13 - 40 - 20 - 10 - 5 - 16 - 8 - 4 - 2 - 1. It works again!
@@ -41,7 +41,7 @@ while n > 1:
     if n  2 == 0:
         n //= 2
     else:
-        n = ns * 3 + 1
+        n = n * 3 + 1
 
 print(steps) 
 ```
