--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -13,6 +13,14 @@ This website uses the [Nordlys](https://github.com/FjellOverflow/nordlys) theme,
 import Logo from '@/assets/logo.svg'
 import { Image } from 'astro:assets'
 
-<div>
-  <Image src={Logo} class="w-1/2 md:w-1/3 mx-auto" alt="FjellOverflow logo, two grey mountains with stack of yellow boxes in front" loading="eager"/>
+<div class="flex justify-center items-center mt-12">
+  <div class="relative w-1/2 md:w-1/3">
+    <span class="absolute inset-0 bg-accent/50 blur-3xl -z-10 rounded-full" />
+    <Image
+      src={Logo}
+      class="w-full h-auto"
+      alt="FjellOverflow logo, two grey mountains with stack of yellow boxes in front"
+      loading="eager"
+    />
+  </div>
 </div>
