--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -13,12 +13,12 @@ This website uses the [Nordlys](https://github.com/FjellOverflow/nordlys) theme,
 import Logo from '@/assets/logo.svg'
 import { Image } from 'astro:assets'
 
-<div class="flex justify-center items-center mt-12">
+<div class="mt-12 flex items-center justify-center">
   <div class="relative w-1/2 md:w-1/3">
-    <span class="absolute inset-0 bg-accent/50 blur-3xl -z-10 rounded-full" />
+    <span class="bg-accent/50 absolute inset-0 -z-10 rounded-full blur-3xl" />
     <Image
       src={Logo}
-      class="w-full h-auto"
+      class="h-auto w-full"
       alt="FjellOverflow logo, two grey mountains with stack of yellow boxes in front"
       loading="eager"
     />
