remove bookwyrm & bookshelf page

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -6,7 +6,7 @@ activeHeaderLink: About
 
 # About
 
-I'm a web developer with a passion for [Typescript](/tags/typescript/) and its ecosystem. My other interests include [Linux](/tags/linux/), [online privacy](/tags/privacy/), [self-hosting](/tags/devops/), and free and open-source software. When not at my desk, I enjoy [reading a good book](/bookshelf/) and can be found traveling and [hiking in nature](/photos/).
+I'm a web developer with a passion for [Typescript](/tags/typescript/) and its ecosystem. My other interests include [Linux](/tags/linux/), [online privacy](/tags/privacy/), [self-hosting](/tags/devops/), and free and open-source software. When not at my desk, I enjoy reading a good book or can be found traveling and [hiking in nature](/photos/).
 
 This website uses the [Nordlys](https://github.com/FjellOverflow/nordlys) theme, created by myself with [Astro](https://astro.build/).
 
